customer-apps/simplenodeservice-team03-qa/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: "simplenodeservice-team03-qa"
  labels:
    dt.owner: "team03"
  annotations:
    keptn.sh/lifecycle-toolkit: "not enabled"
