customer-apps/simplenodeservice-team03-qa/rollout.yml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: "simplenodeservice-team03"
  namespace: "simplenodeservice-team03-qa"
  labels:
    dt.owner: "team03"
spec:
  replicas: 1
  strategy:
    canary:
      steps:
      - setWeight: 50
      - pause: {duration: 5s}
      - setWeight: 100
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: userinterface
  template:
    metadata:
      labels:
        dt.owner: "team03"
        app.kubernetes.io/name: userinterface
        app.kubernetes.io/part-of: "simplenodeservice-team03"
        app.kubernetes.io/version: "1.0.2"
        dynatrace-release-stage: "qa"
        backstage.io/component: "default.simplenodeservice-team03-qa"
    spec:
      containers:
      - name: rollouts-demo
        image: grabnerandi/simplenodeservice:1.0.2
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 3Mi
            cpu: 5m
